# The_Sims_4_Exception_Quarantiner

./: .gitignore  README.md
.github/workflows/: build-release.yml
SimsModFixer/: CMakeLists.txt
SimsModFixer/build_fresh/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  SimsModFixer.sln  SimsModFixer.vcxproj  SimsModFixer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
SimsModFixer/build_fresh/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
SimsModFixer/build_fresh/SimsModFixer.dir/Debug/: SimsModFixer.exe.recipe
SimsModFixer/build_fresh/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
SimsModFixer/build_fresh/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
SimsModFixer/src/: main.cpp  mainwindow.cpp  mainwindow.h
